--- a/blocks/quote/__text/quote__text.css
+++ b/blocks/quote/__text/quote__text.css
@@ -1,7 +1,13 @@
-.quote__text {
-    max-width: 205px;
-    line-height: 20px;
-    font-size: 12px;
-    font-weight: 400;
-    margin: 0;
-}
+ .quote__text {
+     max-width: 205px;
+     line-height: 20px;
+     font-size: 12px;
+     font-weight: 400;
+     margin: 0;
+ }
+ 
+ @media screen and (max-width: 984px) {
+     .quote__text {
+         max-width: 230px;
+     }
+ }
