--- a/blocks/intro/__caption/intro__caption.css
+++ b/blocks/intro/__caption/intro__caption.css
@@ -8,3 +8,9 @@
     margin: 0;
     padding-bottom: 25px;
 }
+
+@media screen and (max-width: 568px) {
+    .intro__caption {
+        padding-bottom: 15px;
+    }
+}
