--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,3 +4,15 @@
     justify-content: center;
     align-items: flex-start;
 }
+
+@media screen and (max-width: 984px) {
+    .intro__text {
+        padding-bottom: 45px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .intro__text {
+        padding-left: 5px;
+    }
+}
