--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,3 +7,19 @@
     padding-bottom: 92px;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 984px) {
+    .intro {
+        flex-direction: column;
+        max-width: 520px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .intro {
+        max-width: 320px;
+        padding: 0;
+    }
+}
