--- a/blocks/people/people.css
+++ b/blocks/people/people.css
@@ -4,3 +4,19 @@
     padding-left: 48px;
     padding-right: 48px;
 }
+
+@media screen and (max-width: 984px) {
+    .people {
+        max-width: 520px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .people {
+        max-width: 320px;
+        padding-left: 5px;
+        padding-right: 0;
+    }
+}
