--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,6 +6,7 @@
     margin: 0 auto;
     text-rendering: optimizeLegibility;
     transition: all .5s ease-in-out;
+    background-color: #fff;
 }
 
 .page * {
