--- a/pages/index.css
+++ b/pages/index.css
@@ -2,10 +2,21 @@
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__caption/intro__caption.css);
 @import url(../blocks/intro/__image/intro__image.css);
 @import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__image/_order/place__image_order_1.css);
+@import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__description/place__description.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/people/people.css);
 @import url(../blocks/people/__title/people__title.css);
 @import url(../blocks/people/__quotes/people__quotes.css);
@@ -14,3 +25,5 @@
 @import url(../blocks/quote/quote.css);
 @import url(../blocks/quote/__text/quote__text.css);
 @import url(../blocks/quote/__title/quote__title.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer____copyright.css);
