--- a/blocks/footer/__copyright/footer____copyright.css
+++ b/blocks/footer/__copyright/footer____copyright.css
@@ -3,3 +3,14 @@
   font-weight: 700;
   margin: 0;
 }
+
+@media screen and (max-width: 984px) {
+  .footer__copyright {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 568px) {
+  .footer__copyright {
+    font-size: 18px;
+  }
+}
