--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,6 +2,7 @@
   color: #000;
   text-decoration: none;
   margin-right: 35px;
+  font-size: 12px;
   font-weight: 700;
   transition: .7s;
 }
@@ -9,5 +10,11 @@
   opacity: .6;
 }
 .header__link:last-of-type{
-  margin-right: 0;
+  margin: 0;
+}
+@media screen and (max-width: 568px) {
+  .header__link {
+    margin: 0 0 12px;
+    font-size: 10px;
+  }
 }
