--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,4 +2,18 @@
   max-width: 1140px;
   display: flex;
   justify-content: space-between;
+  padding: 50px 70px 90px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 984px) {
+  .header {
+    padding: 32px 24px 64px;
+    max-width: 520px;
+  }
+}
+@media screen and (max-width: 568px) {
+  .header {
+    padding: 16px 5px 24px;
+    max-width: 320px;
+  }
 }
