--- a/blocks/intro/__image/intro__image.css
+++ b/blocks/intro/__image/intro__image.css
@@ -7,6 +7,6 @@
     .intro__image {
         width: 320px;
         height: 320px;
-        padding-bottom: 35px;
+        padding-bottom: 0;
     }
 }
