--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,3 +1,19 @@
 .place__description {
-  margin-bottom: 85px;
+  padding-bottom: 85px;
+  display: grid;
+  row-gap: 30px;
+}
+
+@media screen and (max-width: 984px) {
+  .place__description {
+    padding-bottom: 40px;
+    row-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .place__description {
+    padding-bottom: 20px;
+    row-gap: 16px;
+  }
 }
