--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,16 @@
 .place__image {
   max-width: 640px;
-  max-height: 640px;
-  width: 640px;
-  height: 640px;
+  height: 535px;
+  width: 100%;
   object-fit: cover;
+}
+@media screen and (max-width: 984px) {
+  .place__image {
+   height: 450px;
+  }
+}
+@media screen and (max-width: 568px) {
+  .place__image {
+   height: 355px;
+  }
 }
