--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,3 +4,16 @@
   font-weight: 700;
   margin: 0;
 }
+
+@media screen and (max-width: 984px) {
+  .place__title {
+    font-size: 24px;
+    padding-bottom: 30px;
+  }
+}
+@media screen and (max-width: 568px) {
+  .place__title {
+    font-size: 24px;
+    padding-bottom: 30px;
+  }
+}
