--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,6 +2,8 @@
   display: grid;
   box-sizing: border-box;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
   column-gap: 0;
   row-gap: 0;
 }
+
