--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,3 +3,14 @@
   width: 100%;
   margin-bottom: 130px;
 }
+@media screen and (max-width: 984px) {
+  .places {
+    margin-bottom: 80px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .places {
+    margin-bottom: 64px;
+  }
+}
