--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,21 @@
 .header {
-  max-width: 1140px;
-  display: flex;
-  justify-content: space-between;
-  padding: 50px 70px 90px;
-  margin: 0 auto;
+    max-width: 1140px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 70px 90px;
+    margin: 0 auto;
+    transition: all .7s ease-in-out;
 }
+
 @media screen and (max-width: 984px) {
-  .header {
-    padding: 32px 24px 64px;
-    max-width: 520px;
-  }
+    .header {
+        padding: 32px 24px 64px;
+    }
 }
+
 @media screen and (max-width: 568px) {
-  .header {
-    padding: 16px 5px 24px;
-    max-width: 320px;
-  }
+    .header {
+        padding: 16px 5px 24px;
+        max-width: 320px;
+    }
 }
