--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,6 +6,7 @@
     padding-right: 70px;
     padding-bottom: 92px;
     justify-content: space-between;
+    transition: all .7s ease-in-out;
 }
 
 @media screen and (max-width: 984px) {
