--- a/blocks/people/people.css
+++ b/blocks/people/people.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding-left: 70px;
     padding-right: 70px;
+    transition: all .7s ease-in-out;
 }
 
 @media screen and (max-width: 984px) {
