--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,16 +1,26 @@
 .place__image {
-  max-width: 640px;
-  height: 535px;
-  width: 100%;
-  object-fit: cover;
+    max-width: 640px;
+    height: 535px;
+    width: 100%;
+    object-fit: cover;
+    transition: all .7s ease-in-out;
 }
+
 @media screen and (max-width: 984px) {
-  .place__image {
-   height: 450px;
-  }
+    .place__image {
+        height: 450px;
+    }
 }
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        height: 400px;
+        padding-bottom: 5px;
+    }
+}
+
 @media screen and (max-width: 568px) {
-  .place__image {
-   height: 355px;
-  }
+    .place__image {
+        height: 355px;
+    }
 }
