--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,24 +1,27 @@
 .place__text {
-  margin-left: 70px;
-  margin-top: 65px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-@media screen and (max-width: 984px) {
-  .place__text {
-   margin: 48px 48px 0;
-  }
+    margin-left: 70px;
+    margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all .7s ease-in-out;
 }
 
-@media screen and (max-width: 639px) {
-  .place__text {
-    order: -1;
-  }
+@media screen and (max-width: 984px) {
+    .place__text {
+        margin: 48px 48px 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__text {
+        order: -1;
+        justify-content: flex-start;
+    }
 }
 
 @media screen and (max-width: 568px) {
-  .place__text {
-    margin: 20px 20px 0;
-  }
+    .place__text {
+        margin: 20px 20px 0;
+    }
 }
